# kubersearchagent

./: .gitignore  README.md  kubernotebook.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: kubernotebook-checkpoint.ipynb
app/: app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
logs/: kubernetes_agent_v2_20260329_193631_23ae42.json  kubernetes_agent_v2_20260329_193635_bda2cd.json  kubernetes_agent_v2_20260329_193837_1c80af.json  kubernetes_agent_v2_20260329_193840_30e3bf.json  kubernetes_agent_v2_20260329_193926_da2590.json  kubernetes_agent_v2_20260329_194138_028f37.json  kubernetes_agent_v2_20260329_194143_5d0a17.json  kubernetes_agent_v2_20260329_194146_49f93e.json  kubernetes_agent_v2_20260329_194229_8dcd14.json  kubernetes_agent_v2_20260330_114910_c78dce.json  kubernetes_agent_v2_20260330_114913_483f40.json  kubernetes_agent_v2_20260330_114916_9e76f1.json  kubernetes_agent_v2_20260330_114916_afc6e4.json  kubernetes_agent_v2_20260330_114936_cffba1.json  kubernetes_agent_v2_20260330_114956_6da739.json  kubernetes_agent_v2_20260330_115016_b7af16.json  kubernetes_agent_v2_20260330_115040_8532a2.json  kubernetes_agent_v2_20260330_115110_058cf2.json  kubernetes_agent_v2_20260330_115215_16c946.json  kubernetes_agent_v2_20260331_133346_e3678a.json  kubernetes_agent_v2_20260331_133354_497c9b.json  kubernetes_agent_v2_20260331_133601_0aeb06.json  kubernetes_agent_v2_20260331_133641_2825c8.json  kubernetes_agent_v2_20260331_133744_91314c.json  kubernetes_agent_v3_20260401_121212_488fe4.json  (+9 more)
(+6 files in other folders)
