[project]
name = "ratuiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.10",
    "openai>=2.30.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
